--- a/aquaparko/FoodPage.xaml
+++ b/aquaparko/FoodPage.xaml
@@ -13,20 +13,14 @@
             <ColumnDefinition Width="250"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <Border Padding="5" Grid.Column="1" BorderThickness="1" BorderBrush="Black" Margin="13">
-            <StackPanel>
-                <TextBlock Text="{Binding Title, StringFormat=Название {0}}"/>
-                <TextBlock Text="{Binding Price, StringFormat=Стоимость {0}}"/>
-                <TextBlock Text="{Binding Type, StringFormat=Вид {0}}"/>
-            </StackPanel>
-        </Border>
+
         <StackPanel Margin="10" Grid.Row="1" Grid.RowSpan="2">
             <TextBlock Text="{Binding CountView}"/>
             <Label Content="Поиск:" Width="250"/>
             <TextBox Text="{Binding SearchText,
                 UpdateSourceTrigger=PropertyChanged}" />
             <Label Content="Напитки / Еда:"/>
-            <ComboBox ItemsSource="{Binding Type}"
+            <ComboBox ItemsSource="{Binding Types}"
                       DisplayMemberPath="Title"
                       SelectedItem="{Binding SelectedType,
                 UpdateSourceTrigger=PropertyChanged}"/>
@@ -34,25 +28,42 @@
             <ComboBox ItemsSource="{Binding Sorting}"
                       SelectedIndex="{Binding SelectedSorting,
                 UpdateSourceTrigger=PropertyChanged}"/>
-            <Image Source="circle.png"/>
+            <Image Source="food.png" Margin="20"/>
         </StackPanel>
         <StackPanel Visibility="{Binding IsAdminVisibility}" Grid.Column="1" Grid.Row="1" Orientation="Horizontal" Margin="10">
-            <Button Content="Добавить" Click="AddProduct"/>
-            <Button Content="Удалить" Click="RemoveProduct"/>
+            <Button Content="Добавить" Click="AddFood"/>
+            <Button Content="Удалить" Click="RemoveFood"/>
         </StackPanel>
-        <ListBox Grid.Column="1"
+        
+        <ListView Grid.Column="1"
                  Grid.Row="1"
                  Margin="10"
                  HorizontalContentAlignment="Stretch"
+                  FontSize="20"
                  ItemsSource="{Binding Foods}"
-                 SelectedItem="{Binding SelectedFood}">
-            <ListBox.ContextMenu>
+                 SelectedItem="{Binding SelectedFood}"
+                 >
+            <ListView.ContextMenu>
                 <ContextMenu Visibility="{Binding IsAdminVisibility}">
-                    <MenuItem Header="Добавить" Click="AddProduct"/>
-                    <MenuItem Header="Редактировать" Click="EditProduct"/>
-                    <MenuItem Header="Удалить" Click="RemoveProduct"/>
+                    <MenuItem Header="Добавить" Click="AddFood"/>
+                    <MenuItem Header="Редактировать" Click="EditFood"/>
+                    <MenuItem Header="Удалить" Click="RemoveFood"/>
                 </ContextMenu>
-            </ListBox.ContextMenu>
-        </ListBox>
+            </ListView.ContextMenu>
+            <ListView.View>
+                <GridView>
+
+                    <GridViewColumn Header="Название"  DisplayMemberBinding="{Binding Title}"/>
+                    <GridViewColumn Header="Фото">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <Image Source="{Binding ImagePath}" Height="150" Width="150" Stretch="Uniform"/>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn Header="Цена" DisplayMemberBinding="{Binding Price}"/>
+                </GridView>
+            </ListView.View>
+        </ListView>
     </Grid>
 </Page>
