--- a/aquaparko/SlidePage.xaml
+++ b/aquaparko/SlidePage.xaml
@@ -9,49 +9,56 @@
       Title="SlidePage">
     <Grid Background="Azure">
         <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="250"/>
-        <ColumnDefinition/>
-    </Grid.ColumnDefinitions>
-    <Border Padding="5" Grid.Column="1" BorderThickness="1" BorderBrush="Black" Margin="13">
-        <StackPanel>
-            <TextBlock Text="{Binding Title, StringFormat=Название {0}}"/>
-            <TextBlock Text="{Binding Price, StringFormat=Стоимость {0}}"/>
-            <TextBlock Text="{Binding Type, StringFormat=Вид {0}}"/>
-        </StackPanel>
-    </Border>
-    <StackPanel Margin="10" Grid.Row="1" Grid.RowSpan="2">
-        <TextBlock Text="{Binding CountView}"/>
-        <Label Content="Поиск:" Width="250"/>
-        <TextBox Text="{Binding SearchText,
+            <ColumnDefinition Width="250"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+
+        <StackPanel Margin="10" Grid.Row="1" Grid.RowSpan="2">
+            <TextBlock Text="{Binding CountView}"/>
+            <Label Content="Поиск:" Width="250"/>
+            <TextBox Text="{Binding SearchText,
                 UpdateSourceTrigger=PropertyChanged}" />
-        <Label Content="Температура"/>
-        <ComboBox ItemsSource="{Binding Type}"
-                      DisplayMemberPath="Title"
-                      SelectedItem="{Binding SelectedType,
-                UpdateSourceTrigger=PropertyChanged}"/>
-        <Label Content="Сортировка:"/>
-        <ComboBox ItemsSource="{Binding Sorting}"
+            <Label Content="Сортировка:"/>
+            <ComboBox ItemsSource="{Binding Sorting}"
                       SelectedIndex="{Binding SelectedSorting,
                 UpdateSourceTrigger=PropertyChanged}"/>
-        <Image Source="circle.png"/>
-    </StackPanel>
-    <StackPanel Visibility="{Binding IsAdminVisibility}" Grid.Column="1" Grid.Row="1" Orientation="Horizontal" Margin="10">
-        <Button Content="Добавить" Click="AddProduct"/>
-        <Button Content="Удалить" Click="RemoveProduct"/>
-    </StackPanel>
-    <ListBox Grid.Column="1"
+            <Image Source="circle.png" Margin="20"/>
+        </StackPanel>
+        <StackPanel Visibility="{Binding IsAdminVisibility}" Grid.Column="1" Grid.Row="1" Orientation="Horizontal" Margin="10">
+            <Button Content="Добавить" Click="AddSlide"/>
+            <Button Content="Удалить" Click="RemoveSlide"/>
+        </StackPanel>
+
+        <ListView Grid.Column="1"
                  Grid.Row="1"
                  Margin="10"
                  HorizontalContentAlignment="Stretch"
-                 ItemsSource="{Binding Foods}"
-                 SelectedItem="{Binding SelectedFood}">
-        <ListBox.ContextMenu>
-            <ContextMenu Visibility="{Binding IsAdminVisibility}">
-                <MenuItem Header="Добавить" Click="AddProduct"/>
-                <MenuItem Header="Редактировать" Click="EditProduct"/>
-                <MenuItem Header="Удалить" Click="RemoveProduct"/>
-            </ContextMenu>
-        </ListBox.ContextMenu>
-    </ListBox>
+                  FontSize="20"
+                 ItemsSource="{Binding Attractions}"
+                 SelectedItem="{Binding SelectedAttraction}"
+                 >
+            <ListView.ContextMenu>
+                <ContextMenu Visibility="{Binding IsAdminVisibility}">
+                    <MenuItem Header="Добавить" Click="AddSlide"/>
+                    <MenuItem Header="Редактировать" Click="EditSlide"/>
+                    <MenuItem Header="Удалить" Click="RemoveSlide"/>
+                </ContextMenu>
+            </ListView.ContextMenu>
+            <ListView.View>
+                <GridView>
+
+                    <GridViewColumn Header="Название"  DisplayMemberBinding="{Binding Title}"/>
+                    <GridViewColumn Header="Фото">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <Image Source="{Binding ImagePath}" Height="150" Width="150" Stretch="Uniform"/>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn Header="Уровень страха" DisplayMemberBinding="{Binding ScaryLvlString}"/>
+                    <GridViewColumn Header="Описание"  DisplayMemberBinding="{Binding Description}"/>
+                </GridView>
+            </ListView.View>
+        </ListView>
     </Grid>
 </Page>
