--- a/aquaparko/SpaPage.xaml
+++ b/aquaparko/SpaPage.xaml
@@ -8,7 +8,58 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="SpaPage">
 
-    <Grid>
-        
+    <Grid Background="Azure">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="250"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+
+        <StackPanel Margin="10" Grid.Row="1" Grid.RowSpan="2">
+            <TextBlock Text="{Binding CountView}"/>
+            <Label Content="Поиск:" Width="250"/>
+            <TextBox Text="{Binding SearchText,
+                UpdateSourceTrigger=PropertyChanged}" />
+            <Label Content="Сортировка:"/>
+            <ComboBox ItemsSource="{Binding Sorting}"
+                      SelectedIndex="{Binding SelectedSorting,
+                UpdateSourceTrigger=PropertyChanged}"/>
+            <Image Source="circle.png" Margin="20"/>
+        </StackPanel>
+        <StackPanel Visibility="{Binding IsAdminVisibility}" Grid.Column="1" Grid.Row="1" Orientation="Horizontal" Margin="10">
+            <Button Content="Добавить" Click="AddSlide"/>
+            <Button Content="Удалить" Click="RemoveSlide"/>
+        </StackPanel>
+
+        <ListView Grid.Column="1"
+                 Grid.Row="1"
+                 Margin="10"
+                 HorizontalContentAlignment="Stretch"
+                  FontSize="20"
+                 ItemsSource="{Binding Attractions}"
+                 SelectedItem="{Binding SelectedAttraction}"
+                 >
+            <ListView.ContextMenu>
+                <ContextMenu Visibility="{Binding IsAdminVisibility}">
+                    <MenuItem Header="Добавить" Click="AddSlide"/>
+                    <MenuItem Header="Редактировать" Click="EditSlide"/>
+                    <MenuItem Header="Удалить" Click="RemoveSlide"/>
+                </ContextMenu>
+            </ListView.ContextMenu>
+            <ListView.View>
+                <GridView>
+
+                    <GridViewColumn Header="Название"  DisplayMemberBinding="{Binding Title}"/>
+                    <GridViewColumn Header="Фото">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <Image Source="{Binding ImagePath}" Height="150" Width="150" Stretch="Uniform"/>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn Header="Уровень страха" DisplayMemberBinding="{Binding ScaryLvlString}"/>
+                    <GridViewColumn Header="Описание"  DisplayMemberBinding="{Binding Description}"/>
+                </GridView>
+            </ListView.View>
+        </ListView>
     </Grid>
 </Page>
