--- a/aquaparko/RedakSpa.xaml
+++ b/aquaparko/RedakSpa.xaml
@@ -18,7 +18,7 @@
         <Border BorderThickness="1" BorderBrush="Black" Margin="5" Grid.RowSpan="2" Padding="3">
             <StackPanel Margin="7" Grid.Column="0" Grid.Row="0">
                 <TextBlock HorizontalAlignment="Center" FontSize="20" Text="Id"/>
-                <TextBox FontSize="20" Text="{Binding SelectedSauna.Id}"/>
+                <TextBlock Background="White" FontSize="20" Text="{Binding SelectedSauna.Id}"/>
                 <TextBlock HorizontalAlignment="Center" FontSize="20" Text="Название сауны"/>
                 <TextBox FontSize="20" Text="{Binding SelectedSauna.Title}"/>
                 <TextBlock HorizontalAlignment="Center" FontSize="20" Text="Температура"/>
