--- a/aquaparko/MainPage.xaml
+++ b/aquaparko/MainPage.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:aquaparko"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="MainPage">
+      Title="Главная">
 
     <Grid Background="Azure">
         <Grid.ColumnDefinitions>
