--- a/aquaparko/MainWindow.xaml
+++ b/aquaparko/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:aquaparko"
         mc:Ignorable="d"
-        Title="Окно входа" Height="450" Width="800" FontFamily="Comic Sans MS">
+        WindowStartupLocation="CenterScreen"
+        Title="Окно регистрации и входа" Height="450" Width="800" FontFamily="Comic Sans MS" MaxHeight="450" MaxWidth="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="100"/>
@@ -23,6 +24,9 @@
             <TextBlock Text="Введите Пароль" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="25" Margin="5" Height="35"/>
             <TextBox FontSize="20" Text="{Binding Password}" Margin="5" Height="30"/>
             <Button BorderThickness="1" Background="LightSkyBlue" Content="Войти" Height="35" FontSize="20" Margin="5" Width="150" Click="SignIn"/>
+            <TextBlock FontSize="15" Margin="5" HorizontalAlignment="Center">
+                <Hyperlink Click="GoSignUp">Нет аккаунта?</Hyperlink>
+            </TextBlock>
         </StackPanel>
         <Image Source="logonow.png" Margin="5" Grid.Column="0" Grid.Row="1"/>
     </Grid>
