--- a/aquaparko/RedakSlide.xaml
+++ b/aquaparko/RedakSlide.xaml
@@ -18,8 +18,8 @@
         <Border BorderThickness="1" BorderBrush="Black" Margin="5" Grid.RowSpan="2" Padding="3">
             <StackPanel Margin="7" Grid.Column="0" Grid.Row="0">
                 <TextBlock HorizontalAlignment="Center" FontSize="20" Text="Id"/>
-                <TextBox FontSize="20" Text="{Binding SelectedAttraction.Id}"/>
-                <TextBlock HorizontalAlignment="Center" FontSize="20" Text="Название блюда"/>
+                <TextBlock Background="White" FontSize="20" Text="{Binding SelectedAttraction.Id}"/>
+                <TextBlock HorizontalAlignment="Center" FontSize="20" Text="Название аттракциона"/>
                 <TextBox FontSize="20" Text="{Binding SelectedAttraction.Title}"/>
                 <TextBlock HorizontalAlignment="Center" FontSize="20" Text="Уровень страха"/>
                 <TextBox FontSize="20" Text="{Binding SelectedAttraction.ScaryLvl}"/>
