--- a/aquaparko/Register.xaml
+++ b/aquaparko/Register.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:aquaparko"
         mc:Ignorable="d"
+        WindowStartupLocation="CenterScreen"
         Title="Register" Height="450" Width="800" MaxHeight="450" MaxWidth="800">
     <Grid Background="Azure">
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
