--- a/aquaparko/MyTickets.xaml
+++ b/aquaparko/MyTickets.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="aquaparko.TicketsList"
+﻿<Window x:Class="aquaparko.MyTickets"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,10 +6,10 @@
         xmlns:local="clr-namespace:aquaparko"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Title="TicketsList" MaxHeight="450" MaxWidth="1600" MinWidth="1600">
+        Title="MyTickets" MinHeight="500" MinWidth="1600" MaxHeight="500" MaxWidth="1600">
     <Window.Resources>
-        <ContextMenu x:Key="ContextEdit" Visibility="{Binding IsAdminVisibility, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Page}}">
-            <MenuItem Header="Удалить" Click="RemoveTicket"/>
+        <ContextMenu x:Key="ContextEdit" Visibility="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Page}}">
+            <MenuItem Header="Отменить эту бронь" Click="RemoveTicketo"/>
         </ContextMenu>
     </Window.Resources>
     <Grid Background="Azure">
@@ -19,7 +19,7 @@
         </Grid.ColumnDefinitions>
 
         <StackPanel Margin="10" Grid.Row="1" Grid.RowSpan="2">
-            <TextBlock HorizontalAlignment="Center" Margin="0 5" FontSize="20" Text="Список всех билетов"/>
+            <TextBlock HorizontalAlignment="Center" Margin="0 5" FontSize="20" Text="Список ваших билетов"/>
             <TextBlock Text="{Binding CountView}"/>
             <Label Content="Поиск:" Width="250"/>
             <TextBox Text="{Binding SearchText,
@@ -28,10 +28,12 @@
             <ComboBox ItemsSource="{Binding Sorting}"
                       SelectedIndex="{Binding SelectedSorting,
                 UpdateSourceTrigger=PropertyChanged}"/>
-            <Image VerticalAlignment="Top" Source="ticket.png" Margin="20"/>
+            <Image Source="avatarko.png" Margin="10"/>
+            <TextBlock FontSize="13" Text="* Айди - уникальный номер билета"/>
+            <TextBlock FontSize="13" Text="   в базе данных"/>
         </StackPanel>
         <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal" Margin="10">
-            <Button Content="Удалить" Click="RemoveTicket"/>
+            <Button Content="Отменить эту бронь" Click="RemoveTicketo"/>
         </StackPanel>
 
         <ListView Grid.Column="1"
@@ -44,11 +46,7 @@
                  ContextMenu="{DynamicResource ContextEdit}">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Айди" DisplayMemberBinding="{Binding Id}"/>
-                    <GridViewColumn Header="Айди заказчика" DisplayMemberBinding="{Binding UserId}"/>
-                    <GridViewColumn Header="Имя заказчика" DisplayMemberBinding="{Binding User.FirstName}"/>
-                    <GridViewColumn Header="Фамилия заказчика" DisplayMemberBinding="{Binding User.LastName}"/>
-                    <GridViewColumn Header="Отчество заказчика" DisplayMemberBinding="{Binding User.SurName}"/>
+                    <GridViewColumn Header="Айди билета*" DisplayMemberBinding="{Binding Id}"/>
                     <GridViewColumn Header="Дата" DisplayMemberBinding="{Binding Date}"/>
                 </GridView>
             </ListView.View>
