--- a/aquaparko/SpaPage.xaml
+++ b/aquaparko/SpaPage.xaml
@@ -8,6 +8,13 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="SpaPage">
 
+    <Page.Resources>
+        <ContextMenu x:Key="ContextEdit" Visibility="{Binding IsAdminVisibility, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Page}}">
+            <MenuItem Header="Добавить" Click="AddSpa"/>
+            <MenuItem Header="Редактировать" Click="EditSpa"/>
+            <MenuItem Header="Удалить" Click="RemoveSpa"/>
+        </ContextMenu>
+    </Page.Resources>
     <Grid Background="Azure">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="250"/>
@@ -36,14 +43,8 @@
                  HorizontalContentAlignment="Stretch"
                   FontSize="20"
                  ItemsSource="{Binding Saunas}"
-                 >
-            <ListView.ContextMenu>
-                <ContextMenu Visibility="{Binding IsAdminVisibility}">
-                    <MenuItem Header="Добавить" Click="AddSpa"/>
-                    <MenuItem Header="Редактировать" Click="EditSpa"/>
-                    <MenuItem Header="Удалить" Click="RemoveSpa"/>
-                </ContextMenu>
-            </ListView.ContextMenu>
+                 SelectedItem="{Binding SelectedSauna}"
+                 ContextMenu="{DynamicResource ContextEdit}">
             <ListView.View>
                 <GridView>
 
@@ -55,8 +56,8 @@
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                    <GridViewColumn Header="Температура, °C" DisplayMemberBinding="{Binding Temperature}"/>
-                    <GridViewColumn Header="Влажность, %"  DisplayMemberBinding="{Binding Humidity}"/>
+                    <GridViewColumn Header="Температура" DisplayMemberBinding="{Binding Temperature}"/>
+                    <GridViewColumn Header="Влажность"  DisplayMemberBinding="{Binding Humidity}"/>
                     <GridViewColumn Header="Цена"  DisplayMemberBinding="{Binding Price}"/>
                 </GridView>
             </ListView.View>
