--- a/aquaparko/FoodPage.xaml
+++ b/aquaparko/FoodPage.xaml
@@ -62,6 +62,7 @@
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
                     <GridViewColumn Header="Цена" DisplayMemberBinding="{Binding Price}"/>
+                    <GridViewColumn Header="Состав" DisplayMemberBinding="{Binding Contains}"
                 </GridView>
             </ListView.View>
         </ListView>
