--- a/aquaparko/YourPassword.xaml
+++ b/aquaparko/YourPassword.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:aquaparko"
         mc:Ignorable="d"
-        Title="YourPassword" Height="450" Width="800">
+        WindowStartupLocation="CenterScreen"
+        Title="Ваш пароль" Height="450" Width="800">
     <Grid>
         <StackPanel VerticalAlignment="Center">
             <TextBlock HorizontalAlignment="Center" Margin="300 5" FontSize="25" Text="Ваш пароль:"/>
