--- a/aquaparko/FoodPage.xaml
+++ b/aquaparko/FoodPage.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:aquaparko"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="FoodPage">
+      Title="Буфет">
 
     <Grid Background="Azure">
         <Grid.ColumnDefinitions>
@@ -62,7 +62,7 @@
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
                     <GridViewColumn Header="Цена" DisplayMemberBinding="{Binding Price}"/>
-                    <GridViewColumn Header="Состав" DisplayMemberBinding="{Binding Contains}"
+                    <GridViewColumn Header="Состав" DisplayMemberBinding="{Binding ProductsList}"/>
                 </GridView>
             </ListView.View>
         </ListView>
