--- a/aquaparko/Forgot.xaml
+++ b/aquaparko/Forgot.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:aquaparko"
         mc:Ignorable="d"
-        Title="Forgot" Height="450" Width="800">
+        WindowStartupLocation="CenterScreen"
+        Title="Восстановление пароля" Height="450" Width="800">
     <Grid>
         <StackPanel>
             <TextBlock HorizontalAlignment="Center" Text="{Binding Code}"/>
