--- a/aquaparko/RedakSlide.xaml
+++ b/aquaparko/RedakSlide.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:aquaparko"
         mc:Ignorable="d"
-        Title="RedakSlide" Height="450" Width="800">
+        Title="Окно редактирования и добавления аттракционов" Height="450" Width="800">
     <Grid Background="Azure">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
