--- a/aquaparko/SpaPage.xaml
+++ b/aquaparko/SpaPage.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:aquaparko"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="SpaPage">
+      Title="Сауны и бани">
 
     <Page.Resources>
         <ContextMenu x:Key="ContextEdit" Visibility="{Binding IsAdminVisibility, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Page}}">
