--- a/aquaparko/TicketsList.xaml
+++ b/aquaparko/TicketsList.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:aquaparko"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Title="TicketsList" MaxHeight="450" MaxWidth="1600" MinWidth="1600">
+        Title="Список всех билетов" MaxHeight="450" MaxWidth="1600" MinWidth="1600">
     <Window.Resources>
         <ContextMenu x:Key="ContextEdit" Visibility="{Binding IsAdminVisibility, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Page}}">
             <MenuItem Header="Удалить" Click="RemoveTicket"/>
