--- a/aquaparko/TicketsList.xaml
+++ b/aquaparko/TicketsList.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:aquaparko"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Title="Список всех билетов" MaxHeight="450" MaxWidth="1600" MinWidth="1600">
+        Title="Список всех билетов" MaxHeight="470" MinHeight="470" MaxWidth="1600" MinWidth="1600">
     <Window.Resources>
         <ContextMenu x:Key="ContextEdit" Visibility="{Binding IsAdminVisibility, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Page}}">
             <MenuItem Header="Удалить" Click="RemoveTicket"/>
@@ -29,6 +29,7 @@
                       SelectedIndex="{Binding SelectedSorting,
                 UpdateSourceTrigger=PropertyChanged}"/>
             <Image VerticalAlignment="Top" Source="ticket.png" Margin="20"/>
+            <Button Click="Closing" Content="Назад" BorderBrush="Black" Background="LightSkyBlue" BorderThickness="1" Margin="50 0"/>
         </StackPanel>
         <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal" Margin="10">
             <Button Content="Удалить" Click="RemoveTicket"/>
