--- a/aquaparko/YourPassword.xaml
+++ b/aquaparko/YourPassword.xaml
@@ -12,7 +12,7 @@
             <TextBlock HorizontalAlignment="Center" Margin="300 5" FontSize="25" Text="Ваш пароль:"/>
             <TextBox Text="{Binding Password}" IsReadOnly="True" FontSize="25" Margin="100 5"/>
             <TextBlock FontSize="15" HorizontalAlignment="Center">
-                <Hyperlink Click="BackTo">Вернуться к окну входа</Hyperlink>
+                <Hyperlink Click="BackTo">Вернуться к окну авторизации</Hyperlink>
             </TextBlock>
         </StackPanel>
     </Grid>
